--- a/src/main/resources/static/teacher/css/index.css
+++ b/src/main/resources/static/teacher/css/index.css
@@ -202,7 +202,7 @@ ol, ul, li {
     width: 600px;
     line-height: 34px;
     border-radius: 5px;
-    border: 1px solid #eee;
+    border: 1px solid #b9b9b9;
     outline: none;
     font-size: 26px;
     text-indent: 10px;
