--- a/src/main/resources/templates/teacher/index.html
+++ b/src/main/resources/templates/teacher/index.html
@@ -175,6 +175,7 @@
             // TODO
         }else if(type=="查看"){
             // TODO
+            window.location.href='/teacher/queryQuestionnaireById/'+id+'';
         }else if(type=="删除"){
             common.ajaxSend(
                 "/teacher/deleteQuestionnaireById",
