添加根据问卷id查询已经发布的问卷信息

--- a/src/main/resources/static/teacher/css/addInfo.css
+++ b/src/main/resources/static/teacher/css/addInfo.css
@@ -257,3 +257,9 @@ button{
     height: 50px;
     float: right;
 }
+.add-body .add-context-info  .add-context-info-close-query{
+    display: none;
+}
+.add-query{
+    display: none;
+}
