--- a/src/main/resources/static/teacher/css/index.css
+++ b/src/main/resources/static/teacher/css/index.css
@@ -125,7 +125,7 @@ ol, ul, li {
     height: 20px;
 }
 
-.head-nav a * ,.list-body .list-data-head .not-data .not-data-add * ,.add-data-body .add-data-contex *,caption .has-data-add * {
+.head-nav a *, .list-body .list-data-head .not-data .not-data-add *, .add-data-body .add-data-contex *, caption .has-data-add *, caption .has-data-release *, .data-info td * {
     vertical-align: middle;
 }
 
@@ -161,13 +161,10 @@ ol, ul, li {
     outline: 0 none
 }
 
-
 .list-body .list-data-head .not-data .not-data-add .add-img {
-    width: 20px;
-    height: 20px;
+    width: 25px;
+    height: 25px;
 }
-
-
 
 /*创建问卷*/
 .add-data-head {
@@ -248,6 +245,7 @@ ol, ul, li {
     margin-bottom: 20px;
     text-align: center;
 }
+
 table {
     background-color: transparent;
 }
@@ -256,19 +254,22 @@ table {
     border-spacing: 0;
     border-collapse: collapse;
 }
-.table>tbody>tr>td, .table>tbody>tr>th, .table>tfoot>tr>td, .table>tfoot>tr>th, .table>thead>tr>td, .table>thead>tr>th {
+
+.table > tbody > tr > td, .table > tbody > tr > th, .table > tfoot > tr > td, .table > tfoot > tr > th, .table > thead > tr > td, .table > thead > tr > th {
     padding: 8px;
     line-height: 1.42857143;
     vertical-align: top;
     border-top: 1px solid #ddd;
 }
+
 caption {
     padding-top: 8px;
     padding-bottom: 8px;
     color: #777;
     text-align: left;
 }
-.has-data-add{
+
+.has-data-add {
     width: 130px;
     height: 35px;
     margin-top: 20px;
@@ -280,39 +281,106 @@ caption {
     cursor: pointer;
     outline: 0 none;
 }
-.has-data-add .add-img{
+
+.has-data-add .add-img {
     width: 20px;
     height: 20px;
 }
 
-.ok{
+.ok {
     color: #08F20F;
 }
-.doing{
+
+.doing {
     color: #F2CC1B;
 }
-.wait{
+.draft{
+    color: #dcb8b8;
+}
+
+.wait {
     color: #88ebf8;
 }
-.data-info td button{
+button{
+    cursor: pointer;
+}
+.data-info td button {
     width: 50px;
     height: 25px;
     outline: none;
     border-radius: 3px;
     border: none;
     color: #fff;
+}
+
+.update {
+    background-color: #00968c;
     cursor: pointer;
 }
-.update{
-    background-color: #00968c;
-}
-.delete{
+
+.delete {
     background-color: #f25b07;
+    cursor: pointer;
 }
-.query{
+
+.query {
     background-color: #414f80;
+    cursor: pointer;
 }
-.hide-mode,.show-mode{
+
+.hide-mode, .show-mode {
     display: none;
 }
 
+.has-data-release {
+    width: 130px;
+    height: 35px;
+    margin-top: 20px;
+    border: none;
+    background-color: #02a792;
+    color: #fff;
+    border-radius: 10px;
+    font-size: 18px;
+    cursor: pointer;
+    outline: 0 none;
+}
+
+.has-data-release .add-img {
+    width: 25px;
+    height: 25px;
+}
+
+
+/*复选框样式*/
+.chat-button-location-radio-input +label{
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    cursor: pointer;
+    border: 1px solid rgb(143, 130, 129);
+    border-radius: 5px;
+}
+.chat-button-location-radio-input:checked +label::before{
+    display: inline-block;
+    content: "\2714";
+    text-align: center;
+    font-size: 16px;
+    color: rgba(240, 84, 77, 1);
+}
+input[type=checkbox]{
+    visibility: hidden;
+    position: absolute;
+}
+
+
+.all-list{
+    width: 67px;
+    height: 100%;
+    border: none;
+    outline: none;
+    background: none;
+}
+
+.prohibit{
+    cursor: not-allowed;
+}
