--- a/src/main/resources/templates/teacher/add.html
+++ b/src/main/resources/templates/teacher/add.html
@@ -19,7 +19,7 @@
         </a>
     </div>
     <div class="head-nav ">
-        <a>
+        <a href="/teacher/index.html">
             <img src="../../static/teacher/img/my.png">
             <span>我的问卷</span>
         </a>
