--- a/src/main/resources/templates/teacher/index.html
+++ b/src/main/resources/templates/teacher/index.html
@@ -55,9 +55,16 @@
                         <img class="add-img" src="../../static/teacher/img/add-img.png">
                         <span>创建问卷</span>
                     </button>
+                    <button class="has-data-release">
+                        <img class="add-img" src="../../static/teacher/img/release.png">
+                        <span>发布问卷</span>
+                    </button>
                 </caption>
                 <thead>
                 <tr>
+                    <td>
+                        <button class="all-list hav-all-lis">全选</button>
+                    </td>
                     <td>标题</td>
                     <td>状态</td>
                     <td>操作</td>
@@ -100,42 +107,56 @@
                             if (v.questionnaireState == 0) {
                                 // 已完成
                                 html = '<tr class="data-info" date-id="' + v.questionnaireId + '">' +
-                                    '   <td>' + v.questionnaireTitle + '</td>' +
-                                    '       <td class="ok">已完成</td>' +
+                                    '<input id="'+v.questionnaireId+'" state="'+v.questionnaireState+'" class="chat-button-location-radio-input" type="checkbox" name="checkbox" value="'+v.questionnaireId+'" onClick="changeCheck()" />' +
+                                    '<label  for="'+v.questionnaireId+'"></label >' +
                                     '   <td>' +
+                                    '<span>' + v.questionnaireTitle + '</span>' +
+                                    '</td>' +
+                                    '       <td class="ok">已完成</td>' +
                                     '<td>' +
-                                    '   <button class="update">修改</button>' +
+                                    '   <button class="update" onClick="doSomething(' + v.questionnaireId + ',this)">修改</button>' +
                                     '   |' +
-                                    '   <button class="query">查看</button>' +
+                                    '   <button class="query" onClick="doSomething(' + v.questionnaireId + ',this)">查看</button>' +
                                     '   |' +
-                                    '   <button class="delete">删除</button>' +
+                                    '   <button class="delete" onClick="doSomething(' + v.questionnaireId + ',this)">删除</button>' +
                                     '       </td>' +
                                     '   </tr>'
                             } else if (v.questionnaireState == 1) {
                                 // 进行中
                                 html = '<tr class="data-info" date-id="' + v.questionnaireId + '">' +
-                                    '   <td>' + v.questionnaireTitle + '</td>' +
-                                    '       <td class="doing">进行中</td>' +
+                                        '<td>' +
+                                    '<input id="'+v.questionnaireId+'" state="'+v.questionnaireState+'" class="chat-button-location-radio-input" type="checkbox" name="checkbox" value="'+v.questionnaireId+'" onClick="changeCheck()"/>' +
+                                    '<label  for="'+v.questionnaireId+'"></label >' +
+                                    '</td>'+
+                                    '   <td>' +
+                                    '<span>' + v.questionnaireTitle + '</span>' +
+                                    '</td>' +
+                                    '       <td class="draft">草稿</td>' +
                                     '<td>' +
-                                    '   <button class="update" onClick="doSomething('+v.questionnaireId+',this)">修改</button>' +
+                                    '   <button class="update" onClick="doSomething(' + v.questionnaireId + ',this)">修改</button>' +
                                     '   |' +
-                                    '   <button class="query" onClick="doSomething('+v.questionnaireId+',this)">查看</button>' +
+                                    '   <button class="query" onClick="doSomething(' + v.questionnaireId + ',this)">查看</button>' +
                                     '   |' +
-                                    '   <button class="delete" onClick="doSomething('+v.questionnaireId+',this)">删除</button>' +
+                                    '   <button class="delete" onClick="doSomething(' + v.questionnaireId + ',this)">删除</button>' +
                                     '       </td>' +
                                     '   </tr>'
                             } else if (v.questionnaireState == 2) {
                                 // 待测评
                                 html = '<tr class="data-info" date-id="' + v.questionnaireId + '">' +
-                                    '   <td>' + v.questionnaireTitle + '</td>' +
-                                    '       <td class="wait">待测评</td>' +
+                                    '<td>' +
+                                    '<input id="'+v.questionnaireId+'" state="'+v.questionnaireState+'" class="chat-button-location-radio-input" type="checkbox" name="checkbox" value="'+v.questionnaireId+'" onClick="changeCheck()"/>' +
+                                    '<label  for="'+v.questionnaireId+'"></label >' +
+                                    '</td>'+
                                     '   <td>' +
+                                    '<span>' + v.questionnaireTitle + '</span>' +
+                                    '</td>' +
+                                    '       <td class="wait">已发布</td>' +
                                     '   <td>' +
                                     '   <button class="update">修改</button>' +
                                     '   |' +
-                                    '   <button class="query">查看</button>' +
+                                    '   <button class="query" onClick="doSomething(' + v.questionnaireId + ',this)">查看</button>' +
                                     '   |' +
-                                    '   <button class="delete">删除</button>' +
+                                    '   <button class="delete" onClick="doSomething(' + v.questionnaireId + ',this)">删除</button>' +
                                     '       </td>' +
                                     '   </tr>'
                             }
@@ -150,45 +171,153 @@
                 function (e) {
                     console.log("err" + e);
                 }
-            )
+            );
 
             $('.not-data-add').on('click', function () {
                 window.location.href = "/teacher/add.html";
-            })
+            });
             $('.has-data-add').on('click', function () {
                 window.location.href = "/teacher/add.html";
+            });
+
+            var ids=new Array();
+            var states=new Array();
+            var dos=new Array();
+            var checks=new Array();
+
+
+            $('.has-data-release').on('click', function () {
+                $.each($('input:checkbox'), function () {
+                    if (this.checked&&$(this).attr('state')==1) {
+                        ids=ids.concat($(this).val());
+                        states=states.concat($($(this).parent().siblings()[1]))
+                        dos=dos.concat($($(this).parent().siblings()[2]).find('.update'))
+                        checks=checks.concat($(this));
+                    }else{
+                        $(this).prop("checked", false);
+                    }
+                });
+
+
+                var data={
+                    ids:ids.toString()
+                }
+                 release(data,states,dos,checks);
             })
+            $('.all-list').on('click', function () {
+                if('全选'==$('.all-list').text()){
+                    for (var i = 0; i < $("input[name=checkbox]").length; i++) {
+                        if($($("input[name=checkbox]")[i]).not(":checked")){
+                            $($("input[name=checkbox]")[i]).prop("checked", true);
+                            $('.all-list').html("取消全选")
+                        }
+                    }
+                }else{
+                    for (var i = 0; i < $("input[name=checkbox]").length; i++) {
+                        if($($("input[name=checkbox]")[i]).is(":checked")){
+                            $($("input[name=checkbox]")[i]).prop("checked", false);
+                            $('.all-list').html("全选")
+                        }
+                    }
+                }
+
+
+
+                // $(":checkbox").each(function() {
+                //     if ($(this).prop("checked")) {
+                //         $(this).prop("checked", false);
+                //         $('.all-list').html("全选")
+                //     } else {
+                //         $(this).prop("checked", true);
+                //         $('.all-list').html("取消全选")
+                //     }
+                // })
+            })
+
+
 
         });
     }
 
     init();
 
-
-    function doSomething(id,obj) {
-
-        var type=$(obj).text();
-        var data={
-            questionnaireId:id
+function changeCheck() {
+    var leng='';
+    for (var i = 0; i < $("input[name=checkbox]").length; i++) {
+        if($($("input[name=checkbox]")[i]).is(":checked")){
+            leng++;
         }
-        if(type=="修改"){
-            // TODO
-        }else if(type=="查看"){
-            // TODO
-            window.location.href='/teacher/queryQuestionnaireById/'+id+'';
-        }else if(type=="删除"){
+    }
+    if(leng==$("input[name=checkbox]").length){
+        $('.all-list').html("取消全选")
+    }else{
+        $('.all-list').html("全选")
+    }
+
+
+
+
+}
+    function doSomething(id, obj) {
+
+        var type = $(obj).text();
+        var data = {
+            questionnaireId: id
+        }
+        if (type == "修改") {
+            window.location.href = '/teacher/updateQuestionnaireById/' + id + '';
+        } else if (type == "查看") {
+            window.location.href = '/teacher/queryQuestionnaireById/' + id + '';
+        } else if (type == "删除") {
             common.ajaxSend(
                 "/teacher/deleteQuestionnaireById",
                 data,
                 function (e) {
-                    console.log(e);
-                    window.location.reload()
+                    if($(obj).parent().parent().siblings().length==0)
+                        window.location.reload();
+                    else
+                        $(obj).parent().parent().remove();
                 },
                 function (e) {
-                    
+
                 }
             )
         }
+
+    }
+
+    function release(data,objs,dos,checks) {
+
+        if(data.ids.length>0){
+
+            common.ajaxSend(
+                '/teacher/releaseQuestionnaire',
+                data,
+                function (e) {
+                    if(e.code==1){
+                        $.each(objs,function (i,v) {
+                            $(v).addClass("wait")
+                            $(v).text("已发布")
+                        })
+                        $.each(dos,function (i,v) {
+                            $(v).addClass("prohibit")
+                        })
+                        $.each(checks,function (i,v) {
+                            $(v).prop("checked", false);
+                            $(v).attr('state',2)
+                        })
+                    }else{
+                        return;
+                    }
+                },
+                function (e) {
+
+                }
+
+            )
+        }
+
+
 
     }
 
