--- a/src/main/resources/templates/student/register.html
+++ b/src/main/resources/templates/student/register.html
@@ -28,7 +28,7 @@
 						<span class="focus-input100" data-symbol="&#xf206;"></span>
 					</div>
 					<div class="wrap-input100 validate-input m-b-23" data-validate="请输入姓名">
-						<input class="input100" type="password" name="name" id="name" placeholder="请输入姓名" autocomplete="off">
+						<input class="input100" type="text" name="name" id="name" placeholder="请输入姓名" autocomplete="off">
 						<span class="focus-input100" data-symbol="&#xf190;"></span>
 					</div>
 					<div class="wrap-input100 validate-input m-b-23" data-validate="请输入密码">
@@ -40,7 +40,7 @@
 						<span class="focus-input100" data-symbol="&#xf190;"></span>
 					</div>
 					<div class="wrap-input100 validate-input m-b-23" data-validate="请输入邮箱">
-						<input class="input100" type="password" name="email" id="email" placeholder="请输入邮箱" autocomplete="off">
+						<input class="input100" type="email" name="email" id="email" placeholder="请输入邮箱" autocomplete="off">
 						<span class="focus-input100" data-symbol="&#xf190;"></span>
 					</div>
 
