添加分页、模糊、下拉菜单查询

--- a/src/main/resources/templates/teacher/add.html
+++ b/src/main/resources/templates/teacher/add.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>问卷网-创建测评</title>
+    <title>问卷网-创建问卷</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../../static/teacher/css/index.css">
@@ -47,11 +47,11 @@
 </nav>
 <nav class="list-body">
     <div class="add-data-head">
-        <div class="add-data-head-title">创建测评</div>
+        <div class="add-data-head-title">创建问卷</div>
     </div>
     <div class="add-data-body">
         <div class="add-data-contex" data-validate="名称不能为空">
-            <span class="add-data-text">测评名称：</span>
+            <span class="add-data-text">问卷名称：</span>
             <input class="add-data-input input100" id="title" autocomplete="off" />
         </div>
         <button class="add-data-submit">立即创建</button>
