--- a/src/main/resources/static/teacher/css/index.css
+++ b/src/main/resources/static/teacher/css/index.css
@@ -125,7 +125,7 @@ ol, ul, li {
     height: 20px;
 }
 
-.head-nav a *, .list-body .list-data-head .not-data .not-data-add *, .add-data-body .add-data-contex *, caption .has-data-add *, caption .has-data-release *, .data-info td * {
+.head-nav a *, .list-body .list-data-head .not-data .not-data-add *, .add-data-body .add-data-contex *, caption *,caption .has-data-add *, caption .has-data-release *, .data-info td * {
     vertical-align: middle;
 }
 
@@ -272,11 +272,10 @@ caption {
 .has-data-add {
     width: 130px;
     height: 35px;
-    margin-top: 20px;
     border: none;
     background-color: #FFC125;
     color: #fff;
-    border-radius: 10px;
+    border-radius: 4px;
     font-size: 18px;
     cursor: pointer;
     outline: 0 none;
@@ -299,7 +298,7 @@ caption {
 }
 
 .wait {
-    color: #88ebf8;
+    color: #29903d;
 }
 button{
     cursor: pointer;
@@ -335,11 +334,10 @@ button{
 .has-data-release {
     width: 130px;
     height: 35px;
-    margin-top: 20px;
     border: none;
     background-color: #02a792;
     color: #fff;
-    border-radius: 10px;
+    border-radius: 4px;
     font-size: 18px;
     cursor: pointer;
     outline: 0 none;
